deployments/kustomize/base/network/network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
spec:
  # The default posture for a security first namespace is to
  # deny all traffic. If not added this rule will be added
  # by Platform Services during environment cut-over.
  podSelector: {}
  ingress: []

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
spec:
  podSelector: { }
  ingress:
    - from:
        - podSelector: { }
  policyTypes:
    - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-ingress
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
  policyTypes:
    - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-database-port-tcp-5432
spec:
  podSelector:
    matchLabels:
      connection: net-database-server
  ingress:
  - from:
    - podSelector:
        matchLabels:
          connection: net-database-client
    ports:
    - protocol: TCP
      port: 5432
